docs/book/samples/appa/unused_expr_check.out
error[unused]: unused expression: every non-final line binds a name (sequence effects with `>>`)
  --> unused_expr_check.kso:1:3
   1 | 1 + 1
         ^
